force-app/main/default/objects/Time_Log__c/Time_Log__c.object-meta.xml
<CustomObject>
    <label>Time Log</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time_Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>