force-app/main/default/objects/Time_Log__c/fields/Overtime__c.field-meta.xml
<CustomField>
    <fullName>Overtime__c</fullName>
    <formula>Duration__c &gt; 8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overtime</label>
    <type>Checkbox</type>
</CustomField>