force-app/main/default/objects/Time_Log__c/fields/Project_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Project_Assignment__c</fullName>
    <label>Project Assignment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project_Assignment__c.User__r.Id</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Assignment__c</referenceTo>
    <relationshipLabel>Time_Logs</relationshipLabel>
    <relationshipName>Time_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>