force-app/main/default/objects/Time_Log__c/recordTypes/Project_Work.recordType-meta.xml
<RecordType>
    <fullName>Project_Work</fullName>
    <active>true</active>
    <label>Project Work</label>
</RecordType>