force-app/main/default/objects/Time_Log__c/validationRules/Log_should_be_into_time_frames.validationRule-meta.xml
<ValidationRule>
    <fullName>Log_should_be_into_time_frames</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    Date__c &lt; Project_Assignment__r.Start_date__c,
    AND(
        NOT(ISBLANK(Project_Assignment__r.End_date__c )),
        Date__c &gt; Project_Assignment__r.End_date__c 
    )
)</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage
    >The Log Date must fall within your Project Assignment start and end dates</errorMessage>
</ValidationRule>