force-app/main/default/objects/Time_Log__c/validationRules/Minimum_step.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_step</fullName>
    <active>true</active>
    <errorConditionFormula>Duration__c   &lt;=  0</errorConditionFormula>
    <errorDisplayField>Duration__c</errorDisplayField>
    <errorMessage>Duration cannot be less than 0</errorMessage>
</ValidationRule>