force-app/main/default/objects/Time_Log__c/validationRules/Must_be_in_progress.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_be_in_progress</fullName>
    <active>true</active>
    <errorConditionFormula
    >NOT(ISPICKVAL(Project_Assignment__r.Project__r.Status__c, &apos;In Progress&apos;))</errorConditionFormula>
    <errorMessage>Project must have &apos;In Progress&apos; status</errorMessage>
</ValidationRule>