force-app/main/default/objects/Time_Log__c/validationRules/Must_have_description.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_description</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Name)&lt;= 15</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Your description must contain more than 15 characters</errorMessage>
</ValidationRule>